# django-achievementchaser

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  railway.json  rcelery.bat  setup.cfg  setup.py  start.bat  vercel.json
.github/workflows/: build.yml  check-backend.yml  check-formatting.yml  check-frontend.yml  check-style.yml  run-tests.yml
achievementchaser/: __init__.py  asgi.py  celery.py  settings.py  steam.py  urls.py  wsgi.py
achievementchaser/achievementchaser/: __init__.py  schema.py  settings.py  urls.py  wsgi.py
achievementchaser/management/lib/: command_logger.py
achievements/: admin.py  models.py  schema.py
achievements/migrations/: 0001_initial.py  0002_rename_achievementachievers_achievementachiever.py  0003_delete_achievementachiever.py
games/: admin.py  models.py  schema.py
games/migrations/: 0001_initial.py  0002_gameowner_rename_gameachievements_gameachievement_and_more.py  0003_alter_gameowner_added.py  0004_alter_game_resynchronized_delete_gameowner.py  0005_alter_gameachievement_unique_together.py
players/: admin.py  models.py  schema.py  steam.py  tasks.py
players/management/commands/: import_player.py  resynchronize_player.py
players/migrations/: 0001_initial.py  0002_rename_friends_friend.py  0003_remove_player_steam_player_avatar_large_url_and_more.py  0004_ownedgame_gameplaytime_achievementachieved.py  0005_alter_achievementachieved_unique_together_and_more.py
src/: manage.py
src/achievementchaser/: __init__.py  _version.py  asgi.py  celery.py  example.env  graphql_utils.py  schema.py  settings.py  steam.py  test_utilities.py  testdata.py  tests.py  urls.py  utilities.py  wsgi.py
src/achievements/: admin.py  models.py  responsedata.py  schema.py  service.py  steam.py  testdata.py  tests.py
src/achievements/migrations/: 0001_initial.py  0002_alter_achievement_global_percentage.py  0002_rename_achievementachievers_achievementachiever.py  0003_alter_achievement_game.py  (+2 more)
src/games/: admin.py  models.py  queue.py  responsedata.py  schema.py  service.py  steam.py  tasks.py  testdata.py  tests.py  utilities.py
src/players/: admin.py  models.py  queries.py  queue.py  responsedata.py  schema.py  service.py  steam.py  tasks.py  test_player_completion.py  test_player_identity.py  testdata.py  tests.py  utilities.py  utils.py
tests/unit/: conftest.py  test_graphql_game_complete.py  test_graphql_player.py  test_graphql_player_available_achievements.py  test_graphql_player_games.py  test_graphql_player_perfect_games.py  test_graphql_player_profile.py  test_graphql_player_unlocked_achievements.py  test_graphql_search.py  test_graphql_search_player.py
ui/: .eslintrc.cjs  .prettierrc.yaml  Caddyfile  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/.storybook/: main.ts
ui/src/: App.css  App.tsx  dayjsUtilities.ts  index.css  main.tsx  router.tsx  types.d.ts  utilities.ts
ui/test/: data.ts
(+219 files in other folders)
