[project]
name = "achievementchaser"
version = "2.6.2"
description = "Achievement Chaser"
requires-python = ">=3.12.0"
dependencies = [
    "gunicorn",
    "psycopg2",
    "django",
    "django-environ",
    "django_filter",
    "graphene_django",
    "django-cors-headers",
    "loguru",
    "requests",
    "django-stubs-ext>=5.2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
extend-exclude = [
    "src/**/migrations/"
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    '**/*venv/**\*',
]

[dependency-groups]
dev = [
    "django-types>=0.22.0",
    "pyrefly>=0.31.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "types-requests>=2.32.4.20250913",
]
